syntax = "proto3";

package user;

option go_package = "pkg/messenger_users_api";

service UserService {
  rpc CreateUser (CreateRequest) returns (CreateResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
}

message CreateResponse {
  string success = 1;
}

message GetUserRequest {
  optional int64 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string email = 4;
  optional string phone = 5;
}

message GetUserResponse {
  int64 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string email = 4;
  optional string phone = 5;
}